--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,15 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your commands here
+      
+      echo 'Hello world'
+      ls
+
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
