Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,8 @@ jobs:
         echo 'Hello world'
         ls
 
+- job: Build
+  steps:
   - task: Maven@3
     inputs:
       mavenPomFile: 'pom.xml'
