Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,10 @@ jobs:
       publishJUnitResults: true
       testResultsFiles: '**/surefire-reports/TEST-*.xml'
       goals: 'clean package -Pstg -DskipTests=true'
+
+  - task: AzureWebApp@1
+    inputs:
+      azureSubscription: 'deployTest'
+      appType: 'webAppLinux'
+      appName: 'testApp'
+      package: '$(System.DefaultWorkingDirectory)/**/*.zip'
