Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,3 +33,15 @@ jobs:
         echo 'Hello world'
         ls      
 
+  - task: CopyFiles@2
+    displayName: 'Copy Files'
+    inputs:
+      Contents: '**/*.zip'
+      TargetFolder: '$(build.artifactstagingdirectory)'
+
+#Your build pipeline references an undefined variable named ‘Parameters.ArtifactName’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab. See https://go.microsoft.com/fwlink/?linkid=865972
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact'
+    inputs:
+      PathtoPublish: '$(build.artifactstagingdirectory)'
+      ArtifactName: '$(Parameters.ArtifactName)'
